--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Fabricamos Marca Própria de Guitarras Sob Encomenda</span><br><br>
                            <a href="https://wa.me/5511980951867" target="_blank">
                            <img src="https://i.imgur.com/ltczhk6.jpg" alt="WhatsApp"></a>
                            </div>
-                            <img src="https://i.imgur.com/mSt5WCY.jpg" alt="Image 23" class="img-fluid" />
+                            <img src="https://i.imgur.com/DsBH7vM.jpg" alt="Image 23" class="img-fluid" />
                         </div>
                     </div>
                 </section>
