--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         #gallery img {
             margin-bottom: 2px;
         }
-    </style><script LANGUAGE="JavaScript">
+    </style>
+<script LANGUAGE="JavaScript">
     function disableselect(e) {
       return false
     }
@@ -44,7 +45,7 @@
       document.onmousedown = disableselect
       document.onclick = reEnable
     }
-  </script>    
+  </script>
 </head>
 
 <body>
@@ -224,7 +225,12 @@ Fabricamos Marca Própria de Guitarras Sob Encomenda</span><br><br>
                            <div class="whatsapp-button text-center">
                            <a href="https://wa.me/5511980951867" target="_blank">
                            <img src="https://i.imgur.com/ltczhk6.jpg" alt="WhatsApp"></a>
-                           </div>                        
+                           </div>
+                           <iframe width="1112" height="600" src="https://www.youtube.com/embed/dlGti895XEg?si=3DL_nSlG09GgBAII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="whatsapp-button text-center">
+                           <a href="https://wa.me/5511980951867" target="_blank">
+                           <img src="https://i.imgur.com/ltczhk6.jpg" alt="WhatsApp"></a>
+                           </div>
                             <img src="https://i.imgur.com/KdXstKM.jpg" alt="Image 21" class="img-fluid" />
                         </div>
                         <div class="container">
