--- a/index.html
+++ b/index.html
@@ -226,7 +226,12 @@ Fabricamos Marca Própria de Guitarras Sob Encomenda</span><br><br>
                            <a href="https://wa.me/5511980951867" target="_blank">
                            <img src="https://i.imgur.com/ltczhk6.jpg" alt="WhatsApp"></a>
                            </div>
-                           <iframe width="1112" height="600" src="https://www.youtube.com/embed/dlGti895XEg?si=3DL_nSlG09GgBAII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                           <div>
+                           <iframe width="1112" height="600" src="https://www.youtube.com/embed/dlGti895XEg?si=3DL_nSlG09GgBAII" 
+                           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                               encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                           </div>
+                               </iframe>
                         <div class="whatsapp-button text-center">
                            <a href="https://wa.me/5511980951867" target="_blank">
                            <img src="https://i.imgur.com/ltczhk6.jpg" alt="WhatsApp"></a>
