--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@ Fabricamos Marca Própria de Guitarras Sob Encomenda</span><br><br>
                            <a href="https://wa.me/5511980951867" target="_blank">
                            <img src="https://i.imgur.com/ltczhk6.jpg" alt="WhatsApp"></a>
                            </div>
-                                <div>                     
-                                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/dlGti895XEg?si=3DL_nSlG09GgBAII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                           <iframe width="100%" height="600" src="https://www.youtube.com/embed/dlGti895XEg?si=3DL_nSlG09GgBAII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                          <iframe width="100%" height="600" src="https://www.youtube.com/embed/VjnAHu9Ptgg?si=EWFBhJgNML7IrQ6T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <div class="whatsapp-button text-center">
                            <a href="https://wa.me/5511980951867" target="_blank">
                            <img src="https://i.imgur.com/ltczhk6.jpg" alt="WhatsApp"></a>
